rx_head_ctrl: Saving robot positions in mouvent EEPROM

--- a/mvt_digiprint_gui/Resources/AllStyles.xaml
+++ b/mvt_digiprint_gui/Resources/AllStyles.xaml
@@ -1,8 +1,5 @@
 ﻿<ResourceDictionary 
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:igPrim="http://schemas.infragistics.com/xaml/primitives" xmlns:ig="http://schemas.infragistics.com/xaml"
-    >
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/rx_common_lib_cs;component/Resources/RxResources.xaml" />
