--- a/mvt_digiprint_gui/Resources/MouventStyle.xaml
+++ b/mvt_digiprint_gui/Resources/MouventStyle.xaml
@@ -21,16 +21,10 @@
     <Color x:Key="Mouvent.LightOrange">#ffffe2ad</Color>
     <SolidColorBrush x:Key="Mouvent.LightOrangeBrush" Color="#ffffe2ad"></SolidColorBrush>
 
-    <Style x:Key="Mouvent.HeaderTextBlockStyle" TargetType="TextBlock">
-        <Setter Property="Foreground" Value="White" />
-        <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="FontSize" Value="20" />
-    </Style>
-
     <Style x:Key="Mouvent.FooterTextBlockStyle" TargetType="TextBlock">
         <Setter Property="Foreground" Value="Black" />
         <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="FontSize" Value="18" />
+        <Setter Property="FontSize" Value="{StaticResource MvtFontSizeFooter}" />
     </Style>
 
 </ResourceDictionary>
