--- a/mvt_digiprint_gui/Resources/PrintSystemStatusButtonStyles.xaml
+++ b/mvt_digiprint_gui/Resources/PrintSystemStatusButtonStyles.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:helpers="clr-namespace:RX_DigiPrint.Helpers">
     <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/rx_common_lib_cs;component/Resources/MvtBasics.xaml" />
         <ResourceDictionary Source="MouventStyle.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
@@ -30,7 +31,7 @@
                             <Border x:Name="InkCylinderHeaderBorder" Background="Transparent" BorderBrush="WhiteSmoke" BorderThickness="2,2,2,0">
                                 <StackPanel Orientation="Horizontal">
                                     <Button Style="{DynamicResource PrintSystemStatusButton}" BorderBrush="{TemplateBinding Background}"/>
-                                    <TextBlock Margin="5" HorizontalAlignment="Left" Foreground="#ff303030" FontWeight="SemiBold" FontSize="14"  VerticalAlignment="Center"
+                                    <TextBlock Margin="5" HorizontalAlignment="Left" Foreground="#ff303030" FontWeight="SemiBold" FontSize="{StaticResource MvtFontSize}"  VerticalAlignment="Center"
                                                Text="{TemplateBinding ToolTip}">
                                     </TextBlock>
                                 </StackPanel>
