--- a/mvt_digiprint_gui/Views/DP803View/DP803Par.xaml
+++ b/mvt_digiprint_gui/Views/DP803View/DP803Par.xaml
@@ -103,22 +103,22 @@
                                 <TextBlock Grid.Row="2" Grid.Column="0" Text="Buses"/>
                                 <rx_uc:PlcParCtrl Grid.Row="2" Grid.Column="1"   ID="PAR_DRYER_1_BUSES"  Label=""  Unit="" Format="n"/>
                                 <rx_uc:PlcParCtrl Grid.Row="2" Grid.Column="2"   ID="PAR_DRYER_2_BUSES"  Label=""  Unit="" Format="n"/>
-                                <TextBlock Grid.Row="2" Grid.Column="3" Text="%" VerticalAlignment="Center" FontSize="{StaticResource FontSizeStd}"/>
+                                <TextBlock Grid.Row="2" Grid.Column="3" Text="%" VerticalAlignment="Center" FontSize="{StaticResource MvtFontSize}"/>
 
                                 <TextBlock Grid.Row="3" Grid.Column="0" Text="Exhaust"/>
                                 <rx_uc:PlcParCtrl Grid.Row="3" Grid.Column="1"   ID="PAR_DRYER_1_EXHAUST"  Label=""  Unit="" Format="n"/>
                                 <rx_uc:PlcParCtrl Grid.Row="3" Grid.Column="2"   ID="PAR_DRYER_2_EXHAUST"  Label=""  Unit="" Format="n"/>
-                                <TextBlock Grid.Row="3" Grid.Column="3" Text="%" VerticalAlignment="Center" FontSize="{StaticResource FontSizeStd}"/>
+                                <TextBlock Grid.Row="3" Grid.Column="3" Text="%" VerticalAlignment="Center" FontSize="{StaticResource MvtFontSize}"/>
 
                                 <TextBlock Grid.Row="4" Grid.Column="0" Text="Temp UP"/>
                                 <rx_uc:PlcParCtrl Grid.Row="4" Grid.Column="1"   ID="PAR_DRYER_1UP_POWER_MAX"  Label=""  Unit="" Format="n"/>
                                 <rx_uc:PlcParCtrl Grid.Row="4" Grid.Column="2"   ID="PAR_DRYER_2UP_POWER_MAX"  Label=""  Unit="" Format="n"/>
-                                <TextBlock Grid.Row="4" Grid.Column="3" Text="°C" VerticalAlignment="Center" FontSize="{StaticResource FontSizeStd}"/>
+                                <TextBlock Grid.Row="4" Grid.Column="3" Text="°C" VerticalAlignment="Center" FontSize="{StaticResource MvtFontSize}"/>
 
                                 <TextBlock Grid.Row="5" Grid.Column="0" Text="Temp DOWN"/>
                                 <rx_uc:PlcParCtrl Grid.Row="5" Grid.Column="1"   ID="PAR_DRYER_1DOWN_POWER_MAX"  Label=""  Unit="" Format="n"/>
                                 <rx_uc:PlcParCtrl Grid.Row="5" Grid.Column="2"   ID="PAR_DRYER_2DOWN_POWER_MAX"  Label=""  Unit="" Format="n"/>
-                                <TextBlock Grid.Row="5" Grid.Column="3" Text="°C" VerticalAlignment="Center" FontSize="{StaticResource FontSizeStd}"/>
+                                <TextBlock Grid.Row="5" Grid.Column="3" Text="°C" VerticalAlignment="Center" FontSize="{StaticResource MvtFontSize}"/>
                             </Grid>
                         </Grid>
                     </rx_uc:PlcParPanel>
