--- a/mvt_digiprint_gui/Views/EnevtView.xaml
+++ b/mvt_digiprint_gui/Views/EnevtView.xaml
@@ -18,16 +18,25 @@
 
         <Grid Grid.Row="0" Background="{StaticResource Mouvent.MainColorBrush}" ShowGridLines="False" >
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <rx_uc:Splicing Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center"></rx_uc:Splicing>
-
-            <rx_uc:MouventTopToolBar Grid.Row="0" HorizontalAlignment="Right"></rx_uc:MouventTopToolBar>
-            
-            <common:MvtButton HorizontalAlignment="Left" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" x:Name="Button_Confirm" Click="Confirm_clicked" Margin="15, 5, 15, 5" >
+            <common:MvtButton HorizontalAlignment="Left"
+                              Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}"
+                              x:Name="Button_Confirm" Click="Confirm_clicked" Margin="15, 5, 15, 5"
+                              Grid.Column="0">
                 <iconPacks:PackIconMaterial HorizontalAlignment="Stretch" VerticalAlignment="Center" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightIcon}" Width="20" Height="20" Kind="Check"></iconPacks:PackIconMaterial>
             </common:MvtButton>
+
+            <StackPanel Orientation="Horizontal" Grid.Column="1" HorizontalAlignment="Right">
+                <rx_uc:Splicing Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center"></rx_uc:Splicing>
+
+                <rx_uc:MouventTopToolBar Grid.Row="0" HorizontalAlignment="Right"></rx_uc:MouventTopToolBar>
+
+            </StackPanel>
+            
+           
         </Grid>
 
         <ig:XamGrid 
@@ -84,7 +93,7 @@
                    OpacityMask="White"
                    >
             <Border Background="{StaticResource Mouvent.LightOrangeBrush}" Margin="5" CornerRadius="5">
-                <TextBlock Margin="10" x:Name="PopUpText" TextWrapping="Wrap"></TextBlock>
+                <TextBlock VerticalAlignment="Top" Margin="10" x:Name="PopUpText" TextWrapping="Wrap"></TextBlock>
             </Border>
         </rx:RxPopup>
     </Grid>
