--- a/mvt_digiprint_gui/Views/LB702UVView/LB702UV_View.xaml
+++ b/mvt_digiprint_gui/Views/LB702UVView/LB702UV_View.xaml
@@ -59,7 +59,8 @@
 
                 <StackPanel Margin="0,0,0,10" Grid.Row="0" x:Name="SettingsTab" Orientation="Horizontal" Background="Transparent">
                     <common:MvtRadioButton Style="{StaticResource MvtTabsSelectionRadioButton}" x:Name="RB_Main"          Content="Main"          IsChecked="true"/>
-                    <common:MvtRadioButton Style="{StaticResource MvtTabsSelectionRadioButton}" x:Name="RB_Log"           Content="Log"           />
+                <common:MvtRadioButton Style="{StaticResource MvtTabsSelectionRadioButton}" x:Name="RB_Cleaning"          Content="Cleaning"/>
+                <common:MvtRadioButton Style="{StaticResource MvtTabsSelectionRadioButton}" x:Name="RB_Log"           Content="Log"           />
                     <common:MvtRadioButton Style="{StaticResource MvtTabsSelectionRadioButton}" x:Name="RB_Plc"           Content="PLC Info"      Last="True"/>
                 </StackPanel>   
 
@@ -68,9 +69,8 @@
                 <Grid Grid.Row="1" Visibility="{Binding ElementName=RB_Main, Path=IsChecked, Converter={StaticResource IntToVisible_Converter}}">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
                     <local:LB702UV_Par Grid.Column="0"/>
 
@@ -86,12 +86,13 @@
                         </Grid>
                     </ScrollViewer>
 
-                    <ScrollViewer Margin="10,0,10,0" Grid.Column="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Hidden">
-                        <rx_uc:StepperView />
-                    </ScrollViewer>
+                   
                 </Grid>
 
-                <!-- TAB: PLC Log ____________________________________________________________-->
+            <!-- TAB: Cleaning ____________________________________________________________-->
+            <rx_uc:StepperView Visibility="{Binding ElementName=RB_Cleaning, Path=IsChecked, Converter={StaticResource IntToVisible_Converter}}" Grid.Row="1"/>
+            
+            <!-- TAB: PLC Log ____________________________________________________________-->
                 <rx_uc:PlcLog Grid.Row="1"
                       HorizontalAlignment="Left"
                       VerticalAlignment="Stretch"
@@ -99,7 +100,7 @@
                       />
 
                 <!-- TAB: PLC Info ______________________________________________________________________________________-->
-                <rx_uc:PlcStatus Grid.Row="1" Visibility="{Binding ElementName=RB_Plc,  Path=IsChecked, Converter={StaticResource IntToVisible_Converter}}"/>
+            <rx_uc:PlcStatus HorizontalAlignment="Stretch" Grid.Row="1" Visibility="{Binding ElementName=RB_Plc,  Path=IsChecked, Converter={StaticResource IntToVisible_Converter}}"/>
             </Grid>
    
 
