--- a/mvt_digiprint_gui/Views/PrintQueueView/PrintQueueView.xaml
+++ b/mvt_digiprint_gui/Views/PrintQueueView/PrintQueueView.xaml
@@ -95,8 +95,8 @@
             
             <!-- title ____________________________________________________________-->
           <Grid Margin="10" Grid.Row="1" ShowGridLines="false">
-                <Border Height="40"  Background="WhiteSmoke">
-                    <TextBlock Foreground="#ff303030" Text="Queue" FontWeight="SemiBold" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                <Border Height="30"  Background="WhiteSmoke">
+                    <TextBlock Foreground="#ff303030" Text="Queue" FontSize="{StaticResource MvtFontSize}" FontWeight="SemiBold" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </Border>
             </Grid>
            
@@ -169,14 +169,14 @@
                     <ig:TemplateColumn Key="Copies" HeaderText="Copies">
                         <ig:TemplateColumn.ItemTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Converter={StaticResource Copies_Converter}}" HorizontalAlignment="Center" FontSize="{StaticResource FontSizeStd}"/>
+                                <TextBlock Text="{Binding Converter={StaticResource Copies_Converter}}" HorizontalAlignment="Center" FontSize="{StaticResource MvtFontSize}"/>
                             </DataTemplate>
                         </ig:TemplateColumn.ItemTemplate>
                     </ig:TemplateColumn>
                     <ig:TemplateColumn Key="ScanLength" HeaderText="Volume" Width="auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" >
                         <ig:TemplateColumn.ItemTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Converter={StaticResource ScanLength_Converter}}" HorizontalAlignment="Center" FontSize="{StaticResource FontSizeStd}"/>
+                                <TextBlock Text="{Binding Converter={StaticResource ScanLength_Converter}}" HorizontalAlignment="Center" FontSize="{StaticResource MvtFontSize}"/>
                             </DataTemplate>
                         </ig:TemplateColumn.ItemTemplate>
                     </ig:TemplateColumn>
@@ -186,7 +186,7 @@
                             <DataTemplate>
                                 <Grid Width="200" Visibility="{Binding Progress, Converter={StaticResource IntToVisible_Converter}}">
                                     <rx:RxProgressBar Foreground="SeaGreen" VerticalAlignment="Stretch" ValueStr="{Binding Progress}"/>
-                                    <TextBlock Text="{Binding ProgressStr}" HorizontalAlignment="Center" FontSize="{StaticResource FontSize}"/>
+                                    <TextBlock Text="{Binding ProgressStr}" HorizontalAlignment="Center" FontSize="{StaticResource MvtFontSize}"/>
                                 </Grid>
                             </DataTemplate>
                         </ig:TemplateColumn.ItemTemplate>
@@ -235,11 +235,11 @@
 
        <!-- _______ Splitter ________________________________________________________________-->
         <rx:RxGridSplitter 
-            Grid.Row="2" Height="40" 
+            Grid.Row="2" Height="30" 
             HorizontalAlignment="Stretch" 
             Title="Printed"
             Background="WhiteSmoke"
-            TextBlock.FontSize="{DynamicResource FontSize}"
+            TextBlock.FontSize="{DynamicResource MvtFontSize}"
             TextBlock.FontWeight="SemiBold"
             TextBlock.Foreground="#ff303030"
             Margin="10, 0, 10, 5">
@@ -279,7 +279,7 @@
                     <ig:TemplateColumn Key="Copies" HeaderText="Copies">
                         <ig:TemplateColumn.ItemTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Converter={StaticResource Copies_Converter}}" HorizontalAlignment="Center" FontSize="{StaticResource FontSizeStd}"/>
+                                <TextBlock Text="{Binding Converter={StaticResource Copies_Converter}}" HorizontalAlignment="Center" FontSize="{StaticResource MvtFontSize}"/>
                             </DataTemplate>
                         </ig:TemplateColumn.ItemTemplate>
                     </ig:TemplateColumn>
@@ -295,7 +295,7 @@
                             <DataTemplate>
                                 <Grid Width="200">
                                     <rx:RxProgressBar VerticalAlignment="Stretch" ValueStr="{Binding Progress}"/>
-                                    <TextBlock Text="{Binding ProgressStr}" HorizontalAlignment="Center" FontSize="{StaticResource FontSize}"/>
+                                    <TextBlock Text="{Binding ProgressStr}" HorizontalAlignment="Center" FontSize="{StaticResource MvtFontSize}"/>
                                 </Grid>
                             </DataTemplate>
                         </ig:TemplateColumn.ItemTemplate>
