--- a/mvt_digiprint_gui/Views/PrintSystemView/InkSupplyView.xaml
+++ b/mvt_digiprint_gui/Views/PrintSystemView/InkSupplyView.xaml
@@ -244,7 +244,8 @@
 
                 <StackPanel Margin="2,0,2,0" Grid.Row="1" HorizontalAlignment="Right" Orientation="Horizontal">
                     <TextBlock  Text="{Binding CondPresIn, Converter={StaticResource HeadVal_Converter10}}" VerticalAlignment="Center" Padding="3,0"/>
-                    <common:MvtNumBox Margin="0" Text="{Binding CylinderPresSet, Converter={StaticResource HeadVal_Converter10}}" MinWidth="40" LostFocus="Pressure_LostFocus" HorizontalContentAlignment="Right"/>
+                    <common:MvtNumBox Margin="0" Text="{Binding CylinderPresSet, Converter={StaticResource HeadVal_Converter10}}"
+                                      MinWidth="40" LostFocus="Pressure_LostFocus" HorizontalContentAlignment="Right"/>
                 </StackPanel>
 
                 <StackPanel Margin="2,0,2,0" Grid.Row="2" HorizontalAlignment="Right" Orientation="Horizontal">
