--- a/mvt_digiprint_gui/Views/TexView/TexMachine.xaml
+++ b/mvt_digiprint_gui/Views/TexView/TexMachine.xaml
@@ -108,7 +108,7 @@
                                                 Kind="Power"></iconPacks:PackIconMaterial>
             </common:MvtButton>
 
-            <TextBlock Grid.Row="1" Grid.Column="0" Text="ALL" HorizontalAlignment="Center" FontSize="{StaticResource FontSizeLarge}" FontWeight="Bold"/>
+            <TextBlock Grid.Row="1" Grid.Column="0" Text="ALL" HorizontalAlignment="Center" FontSize="{StaticResource MvtFontSizeLarge}" FontWeight="Bold"/>
 
             <common:MvtButton Grid.Row="0" Grid.Column="1" x:Name="PAR_WINDER_1_ON" Click="OnOff_Clicked"
                               Style="{StaticResource MouventTexMachineButtonStyle}">
