--- a/mvt_digiprint_gui/Views/TexView/TexPrepare.xaml
+++ b/mvt_digiprint_gui/Views/TexView/TexPrepare.xaml
@@ -23,14 +23,14 @@
         </Grid.RowDefinitions>
         <rx_uc:PlcTitle Grid.Row="0" Grid.ColumnSpan="2" Header="Prepare State"/>
 
-        <TextBlock Grid.Row="1" Text="UW Tension &amp; Ø"        FontSize="{StaticResource FontSizeStd}" Margin="25,0,0,0"/>
-        <TextBlock Grid.Row="2" Text="UW Tension"                FontSize="{StaticResource FontSizeStd}" Margin="25,0,0,0" Background="{StaticResource XamGrid_Alternate}"/>
-        <TextBlock Grid.Row="3" Text="Buffer in Start"           FontSize="{StaticResource FontSizeStd}" Margin="25,0,0,0" />
-        <TextBlock Grid.Row="4" Text="Pressure Roller in Start"  FontSize="{StaticResource FontSizeStd}" Margin="25,0,0,0" Background="{StaticResource XamGrid_Alternate}"/>
-        <TextBlock Grid.Row="5" Text="Scanner in Start"          FontSize="{StaticResource FontSizeStd}" Margin="25,0,0,0"/>
-        <TextBlock Grid.Row="6" Text="RW Tension &amp; Ø"        FontSize="{StaticResource FontSizeStd}" Margin="25,0,0,0" Background="{StaticResource XamGrid_Alternate}"/>
-        <TextBlock Grid.Row="7" Text="RW Tension"                FontSize="{StaticResource FontSizeStd}" Margin="25,0,0,0"/>
-        <TextBlock Grid.Row="8" Text="Head in Printing Position" FontSize="{StaticResource FontSizeStd}" Margin="25,0,0,0" Background="{StaticResource XamGrid_Alternate}"/>
-        <TextBlock Grid.Row="9" Text="Data Ready"                FontSize="{StaticResource FontSizeStd}" Margin="25,0,0,0"/>
+        <TextBlock Grid.Row="1" Text="UW Tension &amp; Ø"        FontSize="{StaticResource MvtFontSize}" Margin="25,0,0,0"/>
+        <TextBlock Grid.Row="2" Text="UW Tension"                FontSize="{StaticResource MvtFontSize}" Margin="25,0,0,0" Background="{StaticResource XamGrid_Alternate}"/>
+        <TextBlock Grid.Row="3" Text="Buffer in Start"           FontSize="{StaticResource MvtFontSize}" Margin="25,0,0,0" />
+        <TextBlock Grid.Row="4" Text="Pressure Roller in Start"  FontSize="{StaticResource MvtFontSize}" Margin="25,0,0,0" Background="{StaticResource XamGrid_Alternate}"/>
+        <TextBlock Grid.Row="5" Text="Scanner in Start"          FontSize="{StaticResource MvtFontSize}" Margin="25,0,0,0"/>
+        <TextBlock Grid.Row="6" Text="RW Tension &amp; Ø"        FontSize="{StaticResource MvtFontSize}" Margin="25,0,0,0" Background="{StaticResource XamGrid_Alternate}"/>
+        <TextBlock Grid.Row="7" Text="RW Tension"                FontSize="{StaticResource MvtFontSize}" Margin="25,0,0,0"/>
+        <TextBlock Grid.Row="8" Text="Head in Printing Position" FontSize="{StaticResource MvtFontSize}" Margin="25,0,0,0" Background="{StaticResource XamGrid_Alternate}"/>
+        <TextBlock Grid.Row="9" Text="Data Ready"                FontSize="{StaticResource MvtFontSize}" Margin="25,0,0,0"/>
     </Grid>
 </UserControl>
