--- a/mvt_digiprint_gui/Views/UserControls/MouventUVToolBar.xaml
+++ b/mvt_digiprint_gui/Views/UserControls/MouventUVToolBar.xaml
@@ -8,13 +8,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="60"
              d:DesignWidth="150">
-    <Grid Background="{StaticResource Mouvent.MainColorBrush}" ShowGridLines="False">
+    <Grid Background="{StaticResource Mouvent.MainColorBrush}" ShowGridLines="False" x:Name="UV_Grid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
         </Grid.ColumnDefinitions>
 
-        <common:MvtButton Grid.Column="0" x:Name="Button_UV" Margin="15,0,15,0" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}"
+        <common:MvtButton Grid.Column="0" Margin="15,0,15,0" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}"
                      Click="UV_Clicked" 
                      ToolTip="UV Dryer" 
                      HorizontalAlignment="Center" 
@@ -36,7 +36,7 @@
                 </Grid>
             </Grid>
         </common:MvtButton>
-        <StackPanel Grid.Column="1">
+        <StackPanel Grid.Column="1" VerticalAlignment="Center">
             <TextBlock Text="{Binding ActionStr}" HorizontalAlignment="Center" FontSize="13" Foreground="White"/>
             <TextBlock Text="{Binding TimeStr}" HorizontalAlignment="Center" FontSize="13" Foreground="White"/>
         </StackPanel>
