--- a/rx_common_lib_cs/Resources/MvtGroupBox.xaml
+++ b/rx_common_lib_cs/Resources/MvtGroupBox.xaml
@@ -13,14 +13,13 @@
                 <ControlTemplate TargetType ="{x:Type GroupBox}">
                     <Grid Margin="0">
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="30"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
                         <Border BorderBrush="WhiteSmoke" BorderThickness="2" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2"></Border>
                         <Border Grid.Row="0" BorderThickness="1" BorderBrush="WhiteSmoke" Background="WhiteSmoke">
-                            <Label Foreground="#ff303030" FontWeight="SemiBold" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                <ContentPresenter Margin="0" ContentSource="Header"/>
-                            </Label>
+                            <TextBlock Foreground="#ff303030" FontWeight="SemiBold" FontSize="{StaticResource MvtFontSize}" HorizontalAlignment="Center" VerticalAlignment="Center"
+                       Text="{TemplateBinding Header}"></TextBlock>
                         </Border>
                         <Border Grid.Row="1" Margin="8, 10 ,8 ,5">
                             <ContentPresenter />
